<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">VHBB Android</string>

    <string name="nav_header_subtitle">Created by Itai Levin (Electric1447)</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="err_network_not_available">Network not available</string>
    <string name="err_repo_invalid_url">Invalid Repo URL</string>
    <string name="err_parse_file_extension">Error while parsing file extension</string>

    <string name="menu_homebrew">Homebrew</string>
    <string name="menu_homebrew_vitadb">Homebrew (VitaDB)</string>
    <string name="menu_plugins">Plugins</string>
    <string name="menu_cbpsdb">CBPS-DB (WIP)</string>
    <string name="menu_extras">Extras</string>
    <string name="menu_customrepo">Custom Repo</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_vitadb">VitaDB</string>
    <string name="menu_source_code">Source Code</string>
    <string name="menu_search">Search</string>
    <string name="menu_all">All</string>
    <string name="menu_original_games">Original Games</string>
    <string name="menu_game_ports">Game Ports</string>
    <string name="menu_utilities">Utilities</string>
    <string name="menu_emulators">Emulators</string>

    <string name="details_author">Author:</string>
    <string name="details_date">Release Date:</string>
    <string name="details_source">Source Page</string>
    <string name="details_release">Release Page</string>
    <string name="details_desc">Description:</string>

    <string name="customrepo_refresh_title">Please enter a valid repo url.</string>
    <string name="customrepo_refresh">Refresh</string>
    <string name="customrepo_dialog_title">Repository URL:</string>

    <string name="prefs_string">app-preferences</string>

    <string name="prefs_custom_download_location_title">Custom download location</string>
    <string name="prefs_custom_download_location_summery">Choose a custom download location.</string>
    <string name="prefs_custom_download_location_key">download-location</string>

    <string name="prefs_cache_title">Clear Cache</string>
    <string name="prefs_cache_summery">Clear the application\'s cache.</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="about">About</string>
    <string name="downloading">Downloading…</string>

    <string name="permutils_title">Permission needed</string>
    <string name="permutils_message">Storage permission is needed to download files</string>
</resources>