<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bnav_all"
        android:icon="@drawable/ic_menu_all_24dp"
        android:title="@string/menu_all" />

    <item
        android:id="@+id/bnav_original_games"
        android:icon="@drawable/ic_menu_playstation_24dp"
        android:title="@string/menu_original_games" />

    <item
        android:id="@+id/bnav_game_ports"
        android:icon="@drawable/ic_menu_doom_24dp"
        android:title="@string/menu_game_ports" />

    <item
        android:id="@+id/bnav_utilities"
        android:icon="@drawable/ic_menu_utilities_24dp"
        android:title="@string/menu_utilities" />

    <item
        android:id="@+id/bnav_emulators"
        android:icon="@drawable/ic_menu_emulators_24dp"
        android:title="@string/menu_emulators" />

</menu>