<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".ui.homebrew.HomebrewDetails"
    tools:ignore="UseCompoundDrawables,ContentDescription,RtlHardcoded,RtlSymmetry">

    <androidx.cardview.widget.CardView
        android:id="@+id/refresh_cardview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/details_margin_edge"
        android:backgroundTint="@color/colorPrimary"
        app:cardCornerRadius="@dimen/details_corner_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/ll_title"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_margin="12dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="64dp"
                        android:layout_height="64dp"
                        android:layout_gravity="center_vertical"
                        android:src="@mipmap/ic_launcher_round" />

                    <TextView
                        android:id="@+id/textview_title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:maxLines="1"
                        android:paddingLeft="12dp"
                        android:text="@string/app_name"
                        android:textColor="@color/textColorTitle"
                        android:textSize="@dimen/text_title_big"
                        app:autoSizeMaxTextSize="@dimen/text_title_big"
                        app:autoSizeMinTextSize="12sp"
                        app:autoSizeStepGranularity="1sp"
                        app:autoSizeTextType="uniform" />

                </LinearLayout>

                <View
                    android:id="@+id/line1"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_below="@id/ll_title"
                    android:layout_marginTop="2dp"
                    android:background="@color/colorBackground" />

                <LinearLayout
                    android:id="@+id/ll_author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/line1"
                    android:orientation="horizontal"
                    android:paddingLeft="12dp"
                    android:paddingTop="6dp"
                    android:paddingRight="12dp"
                    android:paddingBottom="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:paddingRight="8dp"
                        android:text="@string/details_author"
                        android:textColor="@color/textColorDescription"
                        android:textSize="@dimen/text_details_header" />

                    <TextView
                        android:id="@+id/textview_author"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:lines="1"
                        android:textColor="@color/textColorTitle"
                        android:textSize="@dimen/text_details_item" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ll_author"
                    android:orientation="horizontal"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:paddingBottom="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:paddingRight="8dp"
                        android:text="@string/details_date"
                        android:textColor="@color/textColorDescription"
                        android:textSize="@dimen/text_details_header" />

                    <TextView
                        android:id="@+id/textview_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:textColor="@color/textColorTitle"
                        android:textSize="@dimen/text_details_item" />

                </LinearLayout>

                <View
                    android:id="@+id/line2"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_below="@id/ll_date"
                    android:background="@color/colorBackground" />

                <LinearLayout
                    android:id="@+id/ll_pages"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/line2"
                    android:orientation="horizontal"
                    android:paddingLeft="12dp"
                    android:paddingTop="6dp"
                    android:paddingRight="12dp"
                    android:paddingBottom="8dp">

                    <Button
                        android:id="@+id/button_source"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_weight="1"
                        android:text="@string/details_source" />

                    <Button
                        android:id="@+id/button_release"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_weight="1"
                        android:text="@string/details_release" />

                </LinearLayout>

                <View
                    android:id="@+id/line3"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_below="@id/ll_pages"
                    android:background="@color/colorBackground" />

                <LinearLayout
                    android:id="@+id/ll_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/line3"
                    android:orientation="vertical"
                    android:paddingLeft="12dp"
                    android:paddingTop="6dp"
                    android:paddingRight="12dp"
                    android:paddingBottom="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:paddingBottom="8dp"
                        android:text="@string/details_desc"
                        android:textColor="@color/textColorDescription"
                        android:textSize="@dimen/text_details_header" />

                    <TextView
                        android:id="@+id/textview_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:textColor="@color/textColorTitle"
                        android:textSize="@dimen/text_description_big" />

                </LinearLayout>

                <View
                    android:id="@+id/line4"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_below="@id/ll_desc"
                    android:background="@color/colorBackground" />

                <ImageView
                    android:id="@+id/screenshot"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/details_sc_height"
                    android:layout_below="@id/line4"
                    android:layout_margin="@dimen/details_margin_sc"
                    android:paddingBottom="20dp" />

            </RelativeLayout>

        </ScrollView>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|bottom"
            android:layout_margin="12dp">

            <ImageButton
                android:id="@+id/download"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_toRightOf="@id/downloadData"
                android:background="@android:color/transparent"
                android:scaleX="2"
                android:scaleY="2"
                android:src="@drawable/ic_download_circle_24dp" />

            <ImageButton
                android:id="@+id/downloadData"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="6dp"
                android:background="@android:color/transparent"
                android:scaleX="2"
                android:scaleY="2"
                android:src="@drawable/ic_download_data_circle_24dp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>